--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
 		<button class="navbar-toggler" data-toggle="collapse" data-target="#collapse_target"> <span class="navbar-toggler-icon"></span> </button> 
 		<div class="collapse navbar-collapse" id="collapse_target"> 
 		 <ul class="navbar-nav ml-auto"> 
-		  <li class="nav-item"> <a class="nav-link" href="/index.html"><i class="fa fa-home" aria-hidden="true"></i> Home</a> </li> 
+		  <li class="nav-item"> <a class="nav-link" href="/"><i class="fa fa-home" aria-hidden="true"></i> Home</a> </li> 
 		  <li class="nav-item dropdown">
 			<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 			  Companies
